# NAPTRON

./: README.md  eval.py  gather.py  pyproject.toml  requirements.txt  setup.py
config/bdd/: bdd100k_cocofmt_half.py  faster_rcnn_r50_fpn_bddhalf.py  fcos_r50_fpn_bddhalf.py  retinanet_r50_fpn_bddhalf.py
config/gaussian/: faster_rcnn_r50_fpn_bddhalf_gaussian.py  faster_rcnn_r50_fpn_voc0712_cocofmt_gaussian.py  retinanet_r50_fpn_bddhalf_gaussian.py  retinanet_r50_fpn_voc0712_cocofmt_gaussian.py
config/gmm/: faster_rcnn_r50_fpn_bddhalf_gmm.py  faster_rcnn_r50_fpn_bddhalf_gmm_trainset.py  faster_rcnn_r50_fpn_voc0712_cocofmt_gmm.py  faster_rcnn_r50_fpn_voc0712_cocofmt_gmm_trainset.py  fcos_r50_fpn_bddhalf_gmm.py  fcos_r50_fpn_bddhalf_gmm_trainset.py  fcos_r50_fpn_voc0712_cocofmt_gmm.py  fcos_r50_fpn_voc0712_cocofmt_gmm_trainset.py  retinanet_r50_fpn_bddhalf_gmm.py  retinanet_r50_fpn_bddhalf_gmm_trainset.py  retinanet_r50_fpn_voc0712_cocofmt_gmm.py  retinanet_r50_fpn_voc0712_cocofmt_gmm_trainset.py
config/naptron/: faster_rcnn_r50_fpn_bddhalf_naptron.py  faster_rcnn_r50_fpn_bddhalf_naptron_trainset.py  faster_rcnn_r50_fpn_voc0712_cocofmt_naptron.py  faster_rcnn_r50_fpn_voc0712_cocofmt_naptron_trainset.py  fcos_r50_fpn_bddhalf_naptron.py  fcos_r50_fpn_bddhalf_naptron_trainset.py  fcos_r50_fpn_voc0712_cocofmt_naptron.py  fcos_r50_fpn_voc0712_cocofmt_naptron_trainset.py  retinanet_r50_fpn_bddhalf_naptron.py  retinanet_r50_fpn_bddhalf_naptron_trainset.py  retinanet_r50_fpn_voc0712_cocofmt_naptron.py  retinanet_r50_fpn_voc0712_cocofmt_naptron_trainset.py
config/oln/: faster_rcnn_r50_fpn_bddhalf_oln.py  faster_rcnn_r50_fpn_voc0712_cocofmt_oln.py  oln_box.py
config/opendet/: faster_rcnn_r50_fpn_bddhalf_opendet.py  faster_rcnn_r50_fpn_voc0712_cocofmt_opendet.py  retinanet_r50_fpn_bddhalf_opendet.py  retinanet_r50_fpn_voc0712_cocofmt_opendet.py
scripts/: download_voc.sh
(+117 files in other folders)
