[tool.poetry]
name = "NAPTRON"
version = "0.1.0"
authors = ["Krystian Radlak"]
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11.0"
addict = "2.4.0"
autograd = "1.7.0"
autograd-gamma = "0.5.0"
contourpy = "1.3.1"
cycler = "0.12.1"
filelock = "3.16.1"
fonttools = "4.55.0"
fsspec = "2024.10.0"
fvcore = "0.1.5.post20221221"
iopath = "0.1.10"
jinja2 = "3.1.4"
joblib = "1.4.2"
kiwisolver = "1.4.7"
markupsafe = "3.0.2"
matplotlib = "3.9.2"
mmdet = "2.23.0"
mplcursors = "0.6"
mpmath = "1.3.0"
networkx = "3.4.2"
nvidia-cublas-cu12 = "12.4.5.8"
nvidia-cuda-cupti-cu12 = "12.4.127"
nvidia-cuda-nvrtc-cu12 = "12.4.127"
nvidia-cuda-runtime-cu12 = "12.4.127"
nvidia-cudnn-cu12 = "9.1.0.70"
nvidia-cufft-cu12 = "11.2.1.3"
nvidia-curand-cu12 = "10.3.5.147"
nvidia-cusolver-cu12 = "11.6.1.9"
nvidia-cusparse-cu12 = "12.3.1.170"
nvidia-nccl-cu12 = "2.21.5"
nvidia-nvjitlink-cu12 = "12.4.127"
nvidia-nvtx-cu12 = "12.4.127"
opencv-python = "4.10.0.84"
packaging = "24.2"
pandas = "2.2.3"
pillow = "11.0.0"
platformdirs = "4.3.6"
portalocker = "2.10.1"
pycocotools = "2.0.8"
pyparsing = "3.2.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
pyyaml = "6.0.2"
scikit-learn = "1.5.2"
scipy = "1.14.1"
shapely = "2.0.6"
shortuuid = "1.0.13"
six = "1.16.0"
sympy = "1.13.1"
tabulate = "0.9.0"
termcolor = "2.5.0"
terminaltables = "3.1.10"
threadpoolctl = "3.5.0"
tomli = "2.1.0"
tqdm = "4.67.0"
triton = "3.1.0"
typing-extensions = "4.12.2"
tzdata = "2024.2"
yacs = "0.1.8"
yapf = "0.43.0"
python-dotenv = "^1.0.1"
black = "^24.10.0"
numpy = "1.23.5"
reliability = "0.8.7"
setuptools = "^75.6.0"
mmcv = "1.5.0"
mmcv-full = "1.5.0"
torch = "1.12.1"
torchvision = "0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
